# neonbot

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  Dockerfile  Pipfile  Procfile  bot.py  compose.yml  docker-compose.yml  index.py  main.py  pyproject.toml  requirements.txt  setup.py  test.py
docker/: entrypoint.sh
helpers/: database.py  log.py  utils.py  ytdl.py
lib/: lavalink_voice_client.py
modules/: administrator.py  event.py  music.py  search.py  utility.py
neonbot/: __init__.py  __main__.py  bot.py  database.py  env.py
neonbot/assets/: city.list.json  lang.json
neonbot/classes/: __init__.py  chatgpt.py  connect4.py  converters.py  database.py  dropdown.py  embed.py  exchange_gift.py  flyff.py  gemini.py  google.py  pagination.py  panel.py  player.py  player_controls.py  player_handler.py  pokemon.py  pterodactyl.py  select_choices.py  spotify.py  view.py  voice_events.py  youtube.py  ytdl.py  ytdl_info.py  ytmusic.py
neonbot/cogs/: __init__.py  administration.py  event.py  exchange_gift.py  flyff.py  game.py  lavalink_event.py  music.py  panel.py  pterodactyl.py  search.py  utility.py
neonbot/enums/: __init__.py  play_type.py  player_state.py  repeat.py
neonbot/helpers/: constants.py  database.py  date.py  exceptions.py  log.py  utils.py  ytdl.py
neonbot/lang/: chatgpt.en.json  music.en.json
neonbot/libraries/: slash.py
neonbot/models/: Guild.py  Model.py  Settings.py  channel.py  channel_log.py  chatgpt.py  exchange_gift.py  flyff.py  guild.py  model.py  music.py  panel.py  ptero.py  server.py  setting.py
neonbot/modules/: administrator.py  event.py  music.py  search.py  (+1 more)
src/: bot.py  main.py
(+18 files in other folders)
